# ml-simple-api

./: .gitignore  README.md  nj_advanced_server.py  nj_server.py  ny_client.py  pyproject.toml
.github/workflows/: precommits-pylint-pytest.yaml
static/: style.css
templates/: index.html  result.html
