[project]
name = "ml-simple-api"
version = "1.0.0"
description = "Asimple repo to create an API with FastAPI"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
